--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>patika.dev ödev</title>
+</head>
+<body>
+    <h1>Patika Ödevi</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet expedita ad magni molestias porro. Magnam, dolorem amet quae deleniti, molestiae, blanditiis saepe quia omnis cum inventore odit maxime unde quod.</p>
+</body>
+</html>
